examples/negative/parser_syntax/taxology_decl_unsupported.kai
# Negative fixture (parser): `taxology` is reserved for the kind system,
# which is not implemented yet. A top-level `taxology` declaration must
# be rejected with a clear "not yet supported" diagnostic.

taxology Bar {}

fn main() : Int = 0
